force-app/main/default/objects/OpenPhoneNumberSeries__mdt/OpenPhoneNumberSeries__mdt.object-meta.xml
<CustomObject>
    <label>OpenPhoneNumberSeries</label>
    <pluralLabel>OpenPhoneNumberSeries</pluralLabel>
</CustomObject>