force-app/main/default/objects/OpenPhoneNumberSeries__mdt/fields/Number_Group__c.field-meta.xml
<CustomField>
    <fullName>Number_Group__c</fullName>
    <description>The Number Group</description>
    <label>Number Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>