force-app/main/default/objects/OpenPhoneNumberSeries__mdt/fields/Number_Location__c.field-meta.xml
<CustomField>
    <fullName>Number_Location__c</fullName>
    <description>The Number Location</description>
    <label>Number Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>