force-app/main/default/objects/OpenPhoneNumberSeries__mdt/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>The Product_Type</description>
    <label>Product_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>